# squirrel-test-framework

./: README.md  SKILL.md
cracknuts_squirrel_reference/: cpa_analysis.py
examples/: tvla_test_medium.meta.json  tvla_test_strong.meta.json  tvla_test_weak.meta.json
examples/tvla_test_dual.zarr/0/0/fixed_traces/: 0.0  0.1  0.2  0.3  1.0  1.1  1.2  1.3  2.0  2.1  2.2  2.3  3.0  3.1  3.2  3.3  4.0  4.1  4.2  4.3  5.0  5.1  5.2  5.3  (+8 more)
examples/tvla_test_dual_out/: tvla_report.json
examples/tvla_test_medium_out/: tvla_report.json
examples/tvla_test_strong.zarr/: .zattrs
examples/tvla_test_strong_out/: tvla_report.json
examples/tvla_test_weak_out/: tvla_report.json
squirrel-skills/squirrel-dataset-prepare/: SKILL.md
squirrel-skills/squirrel-io-ready/: SKILL.md
src/: pyproject.toml
src/squirral/: __init__.py  base.py  cli.py
src/squirral.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/squirral/analysis/: __init__.py
src/squirral/analysis/cpa/: __init__.py
src/squirral/analysis/dpa/: __init__.py
src/squirral/analysis/lstm/: __init__.py
src/squirral/analysis/tvla/: __init__.py  pipeline.py  synthetic.py  tvla_core.py
src/squirral/data_io/: __init__.py  loaders.py
src/squirral/io/: datasets.py
src/squirral/plot/: __init__.py  tvla_plot.py
src/squirral/report/: __init__.py  models.py
test-data-generator/: generate_tvla_dataset.py
tests/: test_cli.py  test_datasets_io.py  test_loaders.py  test_synthetic.py  test_tvla_analysis.py
tvla-test/: run_tvla_dual.sh  run_tvla_medium.sh  run_tvla_strong.sh  run_tvla_weak.sh
(+496 files in other folders)
