[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "squirral"
version = "0.1.0"
description = "Squirral - Side Channel Analysis Toolbox"
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib", "h5py"]

[project.scripts]
squirral = "squirral.cli:main"
